end docs && correct platform.js
